--- a/stm32f411-blackpill/Makefile
+++ b/stm32f411-blackpill/Makefile
@@ -44,3 +44,49 @@ $(DEPS):
 .PHONY: clean
 clean:
 	$(RM) $(OBJDIR) $(DEPDIR)
+# Ferramentas do toolchain
+
+CC = arm-none-eabi-gcc
+RM = rm -rf
+
+# Diretorios arquivos objeto e de lista de dependencias serao salvos
+
+OBJDIR = build
+DEPDIR = .deps
+
+# Arquivos a serem compilados
+
+SRCS = startup.c \
+        main.c
+
+#Flags do compilador e linker
+
+CFLAGS = -g -mcpu=cortex-m4 -mthumb -Wall -O0
+DEPFLAGS = -MMD -MP -MF $(DEPDIR)/$*.d
+
+# Gera lista de arquivos objeto e cria diretorio onde serao salvos
+
+OBJS = $(patsubst %, $(OBJDIR)/%.o, $(basename $(SRCS)))
+$(shell mkdir -p $(dir $(OBJS)) > /dev/null)
+
+# Gera lista de arquivos de lista dependencia e cria diretorio onde serao salvos
+
+DEPS = $(patsubst %, $(DEPDIR)/%.d, $(basename $(SRCS)))
+$(shell mkdir -p $(dir $(DEPS)) > /dev/null)
+
+all: $(OBJS)
+
+$(OBJDIR)/%.o: %.c $(DEPDIR)/%.d
+	$(CC) -c $(CFLAGS) $(DEPFLAGS) $< -o $@
+
+# Cria um novo target para cada arquivo de dependencia possivel
+
+$(DEPS):
+
+# Inclui conteudo dos arquivos de dependencia
+
+-include $(DEPS)
+
+.PHONY: clean
+clean:
+	$(RM) $(OBJDIR) $(DEPDIR)
